Add JsonSerialiser Test
Increase test coverage of the JsonSerialiser.